[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 144.0
margin_top = 391.0
margin_right = 278.0
margin_bottom = 429.0
text = "Clique Aqui"
icon_align = 1

[node name="LineEdit" type="LineEdit" parent="Button"]
margin_left = -83.0
margin_top = -166.0
margin_right = 204.0
margin_bottom = -119.0

[node name="LineEdit2" type="LineEdit" parent="Button"]
margin_left = -82.0
margin_top = -83.0
margin_right = 202.0
margin_bottom = -35.0

[node name="Button2" type="Button" parent="."]
margin_left = 455.0
margin_top = 397.0
margin_right = 580.0
margin_bottom = 432.0
text = "Clique Aqui"

[node name="ColorRect" type="ColorRect" parent="Button2"]
margin_left = -41.0
margin_top = -105.0
margin_right = 184.0
margin_bottom = -43.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )

[node name="Label" type="Label" parent="Button2"]
margin_left = -35.0
margin_top = -101.0
margin_right = 162.0
margin_bottom = -49.0
autowrap = true

[node name="Button3" type="Button" parent="."]
margin_left = 780.0
margin_top = 404.0
margin_right = 907.0
margin_bottom = 440.0
text = "Clique Aqui"

[node name="ColorRect" type="ColorRect" parent="Button3"]
margin_left = -24.0
margin_top = -104.0
margin_right = 174.0
margin_bottom = -30.0
color = Color( 0, 0, 0, 1 )

[node name="Label2" type="Label" parent="Button3"]
margin_left = -20.0
margin_top = -97.0
margin_right = 170.0
margin_bottom = -37.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
